--- a/src/app/tracker/tracker.page.html
+++ b/src/app/tracker/tracker.page.html
@@ -9,7 +9,7 @@
 
 <ion-content>
 
-  <form id="trackerForm">
+  <form id="trackerForm" [formGroup]="taskForm">
 
     <ion-list>
 
@@ -18,11 +18,13 @@
       </ion-list-header>
 
       <ion-item>
-        <ion-input name="taskName" placeholder="Enter name of task" type="text"></ion-input>
+        <ion-input name="taskName" placeholder="Enter name of task" type="text" formControlName="name"></ion-input>
       </ion-item>
 
-      <ion-button expand="full" color="tertiary" *ngIf="!started" (click)="start()">Start</ion-button>
+      <ion-button expand="full" color="tertiary" *ngIf="!started" (click)="start()" [disabled]="!taskForm.valid">Start</ion-button>
       <ion-button expand="full" color="secondary" *ngIf="started" (click)="stop()">Stop</ion-button>
+
+      <ion-item *ngIf="started">{{time}} seconds</ion-item>
 
     </ion-list>
 
