--- a/src/app/history/history.page.html
+++ b/src/app/history/history.page.html
@@ -8,8 +8,29 @@
 
   <ion-list>
     <ion-item *ngFor="let item of history">
-      <ion-label slot="start">{{item.name}}</ion-label>
-      <ion-note>Completed {{item.stop | date: 'dd/MM/yy h:mm:ss'}}</ion-note>
+      <ion-grid>
+
+        <ion-row>
+          <ion-col>
+              <ion-label>{{item.name}}</ion-label>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="3">
+              <ion-badge>{{duration(item.stop, item.start)}}s</ion-badge>
+          </ion-col>
+          <ion-col size="7">
+              <ion-note>Completed {{item.stop | date: 'dd/MM/yy h:mm:ss'}}</ion-note>
+          </ion-col>
+          <ion-col size="2">
+            <ion-button color="danger" (click)="delete(item.start)">
+              <ion-icon name="trash" size="large"></ion-icon>
+            </ion-button>
+          </ion-col>
+        </ion-row>
+
+      </ion-grid>
     </ion-item>
   </ion-list>
 
